New search functionality

--- a/flaskapp/app/pit_app/templates/dashboard/summary.html
+++ b/flaskapp/app/pit_app/templates/dashboard/summary.html
@@ -1,38 +1,38 @@
 {% extends "layout.html" %}
 {% block content %}
   
-
-    <div class="navbar-default sidebar" role="navigation">
-        <div class="sidebar-nav navbar-collapse">
-            <ul class="nav" id="side-menu">
-                <li class="sidebar-search">
-                    <div class="input-group custom-search-form">
-                        <input type="text" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
-                    </div>
-                    <!-- /input-group -->
-                </li>
-                <li>
-                    <a href="#summary"><i class="fa fa-dashboard fa-fw"></i> Summary</a>
-                </li>
-                <li>
-                    <a href="#mass_statistics"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics<span class="fa arrow"></span></a>
-                </li>
-                <li>
-                    <a href="tables.html"><i class="fa fa-table fa-fw"></i>Expression Data Statistics </a>
-                </li>
-                <li>
-                    <a href="#sequences"><i class="fa fa-edit fa-fw"></i> Sequences</a>
-                </li>
-                <li>
-                    <a href="#genomic"><i class="fa fa-wrench fa-fw"></i> Genomic Context<span class="fa arrow"></span></a>
-                </li>
-            </ul>
+<div class="navbar-default sidebar" role="navigation">
+  <div class="sidebar-nav navbar-collapse">
+    <ul class="nav" id="side-menu">
+      <li class="sidebar-search">
+        <div class="input-group custom-search-form">
+          <input type="text" class="form-control" placeholder="Search...">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="button">
+              <i class="fa fa-search"></i>
+            </button>
+          </span>
         </div>
+        <!-- /input-group -->
+      </li>
+      <li>
+        <a href="#summary"><i class="fa fa-dashboard fa-fw"></i> Summary</a>
+      </li>
+      <li>
+        <a href="#sequences"><i class="fa fa-edit fa-fw"></i> Sequences</a>
+      </li>
+      <li>
+        <a href="#genomic"><i class="fa fa-wrench fa-fw"></i> Genomic Context</span></a>
+      </li>
+      <li>
+        <a href="#mass_statistics"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics</span></a>
+      </li>
+      <li>
+        <a href="tables.html"><i class="fa fa-table fa-fw"></i>Expression Data Statistics </a>
+      </li>
+      
+    </ul>
+    </div>
         <!-- /.sidebar-collapse -->
     </div>
 
@@ -40,7 +40,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">TGE000003265</h1>
+                <h1 class="page-header">TGE???????</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -54,29 +54,16 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <label>TGE ID:</label> {{ tge.id }} <br/>
-                        <label>TGE Type:</label> <br/>
-                        <label>Organisms:</label> <br/>
+                        <label>TGE Name:</label> {{ tge.name }} <br/>
+                        <label>Description:</label> {{ tge.description }}<br/>
+                        <label>Type:</label> {{ type }} <br/>
+                        <label>Length: </label> {{ length }}<br/>
+                        <label>Strand: </label> ({{ strand }})<br/>
+                        <label>Organism(s): - </label> <br/>
                         <label>Associated gene ID:</label> <br/>
                         <label>Associated transcript ID:</label> <br/>
                         <label>Observations:</label>  <br/>
                         <label>Samples:</label> <br/>
-                        <label>Description:</label> {{ tge.description }}
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-
-                <div class="panel panel-default" id="mass_statistics">
-                    <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Data Statistics
-                    </div>
-                    <!-- /.panel-heading -->
-                    <div class="panel-body">
-                        <label>Average peptide coverage:</label> <br>
-                        <label>Average peptides per TGE:</label> <br/>
-                        <label>Average PSM count per peptide:</label> <br/>
-                        <label>Score:</label> <br/>
-                        <label>Software: </label>
                     </div>
                     <!-- /.panel-body -->
                 </div>
@@ -101,10 +88,26 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <label>Amino Acids:</label> 3 <br/>
-                        <label>Region:</label> 5' uORF <br/>
+                        <label>Amino Acids:</label> {{ tge.peptide_num }} <br/>
+                        <label>Region:</label> <br/>
                         <label>Location:</label> <br/>
-                        <label>Assembly:</label> GRCh38
+                        <label>Assembly:</label> 
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+
+                <div class="panel panel-default" id="mass_statistics">
+                    <div class="panel-heading">
+                        <i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Data Statistics
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <label>Average peptide coverage:</label> <br>
+                        <label>Average peptides per TGE:</label> <br/>
+                        <label>Average PSM count per peptide:</label> <br/>
+                        <label>Score:</label> <br/>
+                        <label>Software: </label>
+                        <div id="tester" style="width:700px;height:450px;"></div>
                     </div>
                     <!-- /.panel-body -->
                 </div>
@@ -114,5 +117,14 @@
         <!-- /.row -->
     </div>
     <!-- /#page-wrapper -->
+
+<script src="/static/js/ext/plotly.min.js"></script>
+<script>
+    TESTER = document.getElementById('tester');
+    Plotly.plot( TESTER, [{
+    x: [1, 2, 3, 4, 5],
+    y: [1, 2, 4, 8, 16] }], {
+    margin: { t: 0 } } );
+</script>
 
 {% endblock %}
