--- a/flaskapp/app/pit_app/templates/layout.html
+++ b/flaskapp/app/pit_app/templates/layout.html
@@ -77,6 +77,7 @@
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="/static/js/ext/metisMenu.min.js"></script>
+    <script src="/static/js/ext/plotly.min.js"></script>
 
     <!-- Morris Charts JavaScript 
     <script src="/static/js/ext/raphael-min.js"></script>
