--- a/flaskapp/app/pit_app/static/css/pitdb.css
+++ b/flaskapp/app/pit_app/static/css/pitdb.css
@@ -23,43 +23,47 @@
 }
 
 .dropdown.dropdown-lg .dropdown-menu {
-    margin-top: -1px;
-    padding: 6px 20px;
+  margin-top: -1px;
+  padding: 6px 20px;
 }
 .input-group-btn .btn-group {
-    display: flex !important;
+  display: flex !important;
 }
 .btn-group .btn {
-    border-radius: 0;
-    margin-left: -1px;
+  border-radius: 0;
+  margin-left: -1px;
 }
 .btn-group .btn:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .btn-group .form-horizontal .btn[type="submit"] {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 .form-horizontal .form-group {
-    margin-left: 0;
-    margin-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 .form-group .form-control:last-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 #search-output {
   margin-top: 50px;
 }
 
-#search-results {
+#searchRes {
   width: 1150px;
   max-width:1150px;
   table-layout: fixed;
 }
 
-#search-results tr:hover {
+#searchRes tr:hover {
   cursor: pointer;
+}
+
+.red { 
+  color: red;
 }
