--- a/flaskapp/app/pit_app/templates/home/index.html
+++ b/flaskapp/app/pit_app/templates/home/index.html
@@ -27,6 +27,9 @@
                         <a href="/advanced_search">Search</a>
                     </li>
                     <li>
+                        <a href="/advanced_search">View</a>
+                    </li>
+                    <li>
                         <a href="/signin">Login</a>
                     </li>
                 </ul>
