--- a/flaskapp/app/pit_app/templates/search/results.html
+++ b/flaskapp/app/pit_app/templates/search/results.html
@@ -3,24 +3,27 @@
 {% block content %}
 
 <div id="search-output">
-    <table class="table table-striped table-bordered dataTable no-footer" id="search-results" >
-      <thead>
-        <tr>
-          <th style="width=100px; max-width=100px;">ID</th>
-          <th style="width=200px; max-width=200px;">Name</th>
-          <th>Amino Acid</th>
-        </tr>
-      </thead>
-    	<tbody>
-        {% for tge in tgeRes %}
-    	<tr>
-    	  <td style="width=100px; max-width=100px;">{{ tge.id }}</td>
-    	  <td style="width=200px; max-width=200px;">{{ tge.name }}</td>
-    	  <td class="wordwrap">{{ tge.amino_seq }}</td>
-    	</tr>
-        {% endfor %}
-      </tbody>
-    </table>
+  <input type="hidden" id="searchData" value={{ searchData }}>
+  <input type="hidden" id="searchType" value={{ searchType }}>
+  
+  <table class="table table-striped table-bordered dataTable no-footer" id="searchRes" >
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Amino Acid</th>
+      </tr>
+    </thead>
+  	<tbody>
+      {% for tge in tgeRes %}
+      	<tr>
+      	  <td>{{ tge.id }}</td>
+      	  <td>{{ tge.name }}</td>
+      	  <td class="wordwrap">{{ tge.amino_seq }}</td>
+      	</tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
 <script src="/static/js/ext/jquery.dataTables.js"></script>
 {% endblock %}
