--- a/flaskapp/app/pit_app/templates/dashboard/summary.html
+++ b/flaskapp/app/pit_app/templates/dashboard/summary.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layoutTables.html" %}
 {% block content %}
   
 <div class="navbar-default sidebar" role="navigation">
@@ -40,7 +40,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">TGE00{{ tgeName }}</h1>
+                <h1 class="page-header">TGE_{{ tge.id }}</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -54,16 +54,33 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <label>TGE Name:</label> {{ tge.name }} <br/>
-                        <label>Description:</label> {{ tge.description }}<br/>
-                        <label>Type:</label> {{ type }} <br/>
-                        <label>Length: </label> {{ length }}<br/>
-                        <label>Strand: </label> ({{ strand }})<br/>
-                        <label>Organism(s): </label> {{ tge.organism }}<br/>
-                        <label>Associated gene ID:</label> <br/>
-                        <label>Associated transcript ID:</label> <br/>
-                        <label>Observations:</label>  <br/>
-                        <label>Sample(s):</label> {{ sampleName }} <br/>
+                        <!--<label>Given Name(s):</label> {% for obs in tgeObs %}<br/><span>{{ obs.name }}</span> {% endfor %} <br/>
+                        <label>Description:</label> {% for obs in tgeObs %}<br/><span>{{ obs.description }}</span> {% endfor %} <br/>-->
+                        
+                        <table class="table table-striped table-bordered dataTable no-footer" id="tgeSummary" >
+                        <thead>
+                          <tr>
+                            <th>Observations</th>
+                            <th>Sample</th>
+                            <th>Organism</th>
+                            <th>Type</th>
+                            <th>Strand</th>
+                            <th>Peptide Number</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for res in results %}
+                            <tr>
+                              <td>{{ res.observation }}</td>
+                              <td>{{ res.sample }}</td>
+                              <td>{{ res.organism }}</td>
+                              <td>{{ res.type }}</td>
+                              <td>({{ res.strand }})</td>
+                              <td>{{ res.peptide_num }}</td>
+                            </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
                     </div>
                     <!-- /.panel-body -->
                 </div>
@@ -76,8 +93,26 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body collapse in" id="sequences">
                         <div class="wordwrap"><label>TGE Sequence:</label> <span id="tgeSeq" value={{ tge.amino_seq }}>{{ tge.amino_seq }}</span></div><br/>
-                        <div class="wordwrap"><label>Transcript Sequence:</label> {{ trn.dna_seq }}</div><br/>
-                        <div class="wordwrap"><label>Peptide Sequence(s):</label> {% for peptide in peptides %}<span class="peptide_seq" value={{ peptide }}>{{ peptide }}</span>, {% endfor %} 
+                        <div class="wordwrap"><label>Transcript Sequence(s):</label> <!--{{ dna_seq }}</div><br/>
+                        <div class="wordwrap"><label>Peptide Sequence(s):</label> {% for peptide in peptides %}<span class="peptide_seq" value={{ peptide }}>{{ peptide }}</span>, {% endfor %} -->
+                        <table class="table table-striped table-bordered dataTable no-footer" id="resTrs" >
+                        <thead>
+                          <tr>
+                            <th>Observation</th>
+                            <th>DNA Sequence</th>
+                            <th>Identified Peptides</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for res in results %}
+                            <tr>
+                              <td>{{ res.observation }}</td>
+                              <td><p class="dna-seq">{{ res.dna_seq }}</p><i class="fa fa-plus-circle text-danger"></i></td>
+                              <td>{{ res.peptides }}</td>
+                            </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
                       </div>
                     </div>
                     <!-- /.panel-body -->
@@ -90,13 +125,13 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <label>Amino Acids:</label> {{ tge.peptide_num }} <br/>
+                        <label>Amino Acids:</label><br/>
                         <label>Region:</label> <br/>
                         <label>Location:</label> <br/>
                         <label>Assembly:</label> <br/>
                         <label>UniProt:</label> 
-                        <a href="http://www.uniprot.org/uniprot/"+{{ tge.uniprot_id }} target="blank">{{ tge.uniprot_id }}</a><br/>
-                        <label>Group membership:</label> {{ tge.membership }} <br/>
+                        <!--<a href="http://www.uniprot.org/uniprot/"+{{ tge.uniprot_id }} target="blank">{{ tgeObs.uniprot_id }}</a><br/>-->
+                        <label>Group membership:</label>  <br/>
                     </div>
                     <!-- /.panel-body -->
                 </div>
