--- a/flaskapp/app/pit_app/templates/home/index.html
+++ b/flaskapp/app/pit_app/templates/home/index.html
@@ -17,30 +17,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Upload</a>
-                    </li>
-                    <li>
-                        <a href="/advanced_search">Search</a>
-                    </li>
-                    <li>
-                        <a href="/advanced_search">View</a>
-                    </li>
-                    <li>
-                        <a href="/signin">Login</a>
-                    </li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Upload</a></li>
+                    <li><a href="/search">Search</a></li>
+                    <li><a href="/advanced_search">View</a></li>
+                    <li><a href="/signin">Login</a></li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
-
-    <!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
@@ -55,12 +41,7 @@
                 </div>
             </div>
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.intro-header -->
-
-    <!-- Page Content -->
 
     <a  name="services"></a>
     <div class="content-section-a">
@@ -79,10 +60,7 @@
             </div>
 
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-a -->
 
     <div class="content-section-b">
 
@@ -101,33 +79,20 @@
             </div>
 
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-b -->
 
-
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12" align="center">
                     <ul class="list-inline">
-                        <li>
-                            <a href="/">Home</a>
-                        </li>
+                        <li><a href="/">Home</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
+                        <li><a href="#about">About</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
+                        <li><a href="#services">Services</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
                 </div>
