--- a/flaskapp/app/pit_app/templates/layout.html
+++ b/flaskapp/app/pit_app/templates/layout.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/static/css/ext/metisMenu.min.css">
     <!--link rel="stylesheet" href="/static/css/ext/timeline.css">-->
     <link rel="stylesheet" href="/static/css/ext/morris.css">
-
-    <!-- Custom Fonts -->
+    
     <link rel="stylesheet" href="/static/css/ext/font-awesome.css">
     <link rel="stylesheet" href="/static/css/ext/bootstrap.css">
     <link rel="stylesheet" href="/static/css/ext/bootstrap-select.css">
@@ -24,10 +23,8 @@
       </div>
     </header>
 
-    
     <div class="container">
       <div id="wrapper">
-    <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -68,23 +65,12 @@
 
     <script src="/static/js/ext/jquery-2.1.4.min.js"></script>
     <!--script src="/static/js/ext/jquery.dataTables.js"></script>-->
-    <!--<script src="/static/js/ext/datatables.min.js"></script>-->
+    <script src="/static/js/ext/datatables.min.js"></script>
     <script src="/static/js/ext/bootstrap.min.js"></script>
     
-    <!--script src="/static/js/ext/flot-data.js"></script>
-    <script src="/static/js/ext/morris-data.js"></script>-->
-
-
-    <!-- Metis Menu Plugin JavaScript -->
     <script src="/static/js/ext/metisMenu.min.js"></script>
     <script src="/static/js/ext/plotly.min.js"></script>
 
-    <!-- Morris Charts JavaScript 
-    <script src="/static/js/ext/raphael-min.js"></script>
-    <script src="/static/js/ext/morris.min.js"></script> 
-    <script src="/static/js/ext/morris-data.js"></script>-->
-
-    <!-- Custom Theme JavaScript -->
     <script src="/static/js/ext/sb-admin-2.js"></script>
     <script src="/static/js/ext/validator.js"></script>
     <!--script src="/static/js/ext/bootstrap-select.js"></script>-->
