--- a/flaskapp/app/pit_app/templates/search/form.html
+++ b/flaskapp/app/pit_app/templates/search/form.html
@@ -17,7 +17,7 @@
 
 <div class="container">
   <div class="row">    
-    <form id="searchform" class="form-horizontal" role="form" action="/advanced_search" method="POST">
+    <form id="searchform" class="form-horizontal" role="form" action="/search" method="POST">
       {{ form.csrf_token }}
       <div class="form-group">
         <label for="filter">Search by</label>
@@ -27,15 +27,17 @@
           <optgroup label="TGE">
             <option>Accession Number</option>
             <option>Amino Acid Sequence</option>
-            <option>...</option>
           </optgroup>
           <option role="separator" class="divider"></li>
           <optgroup label="Experiment">
-            <option value="experiment">Accession Number</option>
+            <option>Accession Number</option>
+            <option>Name</option>
           </optgroup>
           <option role="separator" class="divider"></li>
           <optgroup label="Species">
-            <option>...</option>
+            {% for org in organism %}
+              <option>{{ org.name }}</option>
+            {% endfor %}
           </optgroup>
         </select>
       </div>
@@ -43,9 +45,11 @@
         <label for="contain" id="searchFilter" name="searchFilter">Search</label>
         <textarea rows="4" cols="50" class="form-control" id="searchArea" name="searchArea"></textarea>
       </div>
-      <label class="radio-inline"><input type="radio" name="searchType" value="exact" checked="checked">Exact Match</label>
-      <label class="radio-inline"><input type="radio" name="searchType" value="partial">Contains Sequence</label>
-      
+      <div class="searchOptions" style="display: none;">
+        <label class="radio-inline"><input type="radio" name="searchType" value="exact" checked="checked">Exact Match</label>
+        <label class="radio-inline"><input type="radio" name="searchType" value="partial">Contains Sequence</label>
+      </div>
+
       <br/><br/>
       <button type="submit" class="btn btn-primary">Submit <span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
     </form>
