--- a/flaskapp/app/pit_app/templates/results/experiment.html
+++ b/flaskapp/app/pit_app/templates/results/experiment.html
@@ -42,7 +42,7 @@
               <label># TGEs:</label> {{ tgeNum }}</br>
               <label># Samples:</label> {{ sampleNum }}</br>
               <label># Transcripts:</label> {{ trnNum }}<br/>
-              <label># Peptides:</label>
+              <label># Peptides:</label> {{ pepNum }}
           	</div>
           </div>
       </div>
